--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "coveralls": "^2.13.1",
     "cross-env": "5.0.5",
     "enzyme": "^2.9.1",
-    "eslint": "4.5.0",
-    "eslint-config-airbnb": "15.1.0",
+    "eslint": "^5.15.3",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.3.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "jest": "^21.1.0",
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.6.0",
