--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "class-methods-use-this": 0,
     "react/require-default-props": 0,
     "no-param-reassign": 0,
-    "comma-dangle": 0
+    "comma-dangle": 0,
+    "no-restricted-globals": 0
   }
 }
