Get enzyme + jest working w/ React 16

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,8 +1,8 @@
 
 {
   "moduleFileExtensions":[ "js", "jsx"],
-  "moduleNameMapper" :
-  {
+  "moduleNameMapper" : {
     "TwitterLogin": "<rootDir>/src/index.js"
-  }
+  },
+  "setupFilesAfterEnv": ["./setupTests.js"]
 }
