--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,7 @@
 {
-  "env": {
-    "browser": true,
-    "mocha": true,
-    "node": true
-  },
   "presets": [
-    "es2015",
-    "react",
-    "stage-1"
+    "@babel/env",
+    "@babel/react"
   ],
   "plugins": [
     "syntax-flow",
