--- a/package.json
+++ b/package.json
@@ -38,26 +38,30 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "^21.0.2",
     "babel-loader": "7.1.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
     "chai": "^4.1.2",
     "coveralls": "^2.13.1",
     "cross-env": "5.0.5",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "jest": "^21.1.0",
-    "react": "^15.5.4",
-    "react-addons-test-utils": "^15.6.0",
-    "react-dom": "^15.5.0",
+    "jest": "^24.5.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-test-renderer": "^16.8.4",
     "webpack": "3.5.5"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
     "react-icons": "^2.2.5",
     "url-search-params-polyfill": "^2.0.0",
     "whatwg-fetch": "2.0.3"
